--- a/overrides.css
+++ b/overrides.css
@@ -1,4 +1,4 @@
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
 	body {
 		background-size: auto 1000px;
 	}
@@ -14,6 +14,7 @@
 		display: block;
 	}
 	#nav-links {
+		width: 100%;
 		visibility: hidden;
 		opacity: 0;
 		z-index: 1;
@@ -29,6 +30,7 @@
 		gap: 0;
 	}
 	.nav-link {
+		font-weight: normal;
 		width: 100%;
 		text-align: center;
 		padding-left: var(--topbar-padding);
