--- a/overrides.css
+++ b/overrides.css
@@ -1,10 +1,4 @@
 @media (max-width: 1024px) {
-	body {
-		background-size: auto 1000px;
-	}
-	body, #content {
-		min-height: 1000px;
-	}
 	#topbar {
 		background-color: #f9f9f9;
 		backdrop-filter: none;
@@ -56,5 +50,13 @@
 	}
 	img.banner-small {
 		width: 100vw;
+	}
+}
+@media (max-width: 600px) {
+	body {
+		background-size: auto 1000px;
+	}
+	body, #content {
+		min-height: 1000px;
 	}
 }
