--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 /* Typography */
-body, button {
+* {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -105,7 +105,7 @@ body {
 	opacity: 1 !important;
 	visibility: visible !important;
 }
-img.banner-small {
+.banner-small {
 	max-height: 40vh;
 	width: 100%;
 	margin-top: calc(-1 * var(--content-padding-top));
@@ -113,7 +113,7 @@ img.banner-small {
 	align-self: center;
 	object-fit: cover;
 }
-img.banner-cover {
+.banner-cover {
 	max-height: 60vh;
 	width: 100vw;
 	object-fit: cover;
@@ -197,8 +197,22 @@ footer {
 	border-color: transparent;
 	cursor: pointer;
 }
-.button.active {
+.button.active, input:focus {
 	opacity: 0.7;
+}
+input {
+	color: inherit !important;
+	text-align: center;
+	box-sizing: content-box;
+	font-size: min(15px, max(4.4vw, 12px));
+	padding: 10px 18px 10px 18px;
+	margin: 12px 5px 12px 5px;
+	color: inherit;
+	background-color: transparent;
+	outline: none;
+	border-radius: 8px;
+	border: 1.5px solid;
+	border-color: black;
 }
 
 /* Navigation Links */
