--- a/style.css
+++ b/style.css
@@ -168,8 +168,11 @@ footer {
 	text-align: center;
 	left: 0;
 	width: 100vw;
-	margin: 30px 0 30px 0;
+	margin: 30px 0 15px 0;
 	padding: 0 var(--content-padding) 0 var(--content-padding);
+}
+footer .credit {
+	font-size: 15px !important;
 }
 
 /* Buttons */
